# serializer version: 1
# name: test_management_command[False][logs]
  list([
    '🧘 DRY RUN 🧘',
    '''
      
      Traitement de la ligne 2 :
    ''',
    "Création d'un nouveau service pour la structure '12345678901234'.",
    '✅ Service créé.',
  ])
# ---
# name: test_management_command[False][output]
  CaptureResult(
    err='',
    out='''
      
      --------------------------------------------------
      Traitement du fichier CSV terminé.
      Résumé : 1 services créés, 0 erreurs.
      Services potentiellement dupliqués : (0):
      Services en brouillon créés : (1)
      Lignes sans données géographiques : (0)
      --------------------------------------------------
      
  
    ''',
  )
# ---
# name: test_management_command[True][logs]
  list([
    '⚠️ PRODUCTION RUN ⚠️',
    '''
      
      Traitement de la ligne 2 :
    ''',
    "Création d'un nouveau service pour la structure '12345678901234'.",
    '✅ Service créé.',
  ])
# ---
# name: test_management_command[True][output]
  CaptureResult(
    err='',
    out='''
      
      --------------------------------------------------
      Traitement du fichier CSV terminé.
      Résumé : 1 services créés, 0 erreurs.
      Services potentiellement dupliqués : (0):
      Services en brouillon créés : (1)
      Lignes sans données géographiques : (0)
      --------------------------------------------------
      
  
    ''',
  )
# ---
